# humanoid_base_footprint

./: .gitignore  .rdmanifest  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  dependencies.repos  package.xml  setup.py
.github/workflows/: build_and_test_foxy.yaml  build_and_test_galactic.yaml  build_and_test_humble.yaml  build_and_test_iron.yaml  build_and_test_jazzy.yaml  build_and_test_rolling.yaml
docs/: index.rst
include/humanoid_base_footprint/: base_footprint.h  base_footprint.hpp
launch/: base_footprint.launch
src/: base_footprint.cpp
test/: CMakeLists.txt  test_base_footprint.cpp
