<?xml version="1.0"?>
<package format="2">
  <name>humanoid_base_footprint</name>
  <version>1.0.0</version>
  <description>publishes a transform to the base footprint of the robot, based on the orientation and position of the feet.</description>

  <maintainer email="jasper@bit-bots.de">Jasper Güldenstein</maintainer>
  <author email="jasper@bit-bots.de">Jasper Güldenstein</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf_conversions</depend>
  <depend>geometry_msgs</depend>


  <export>
    <bitbots_documentation>
      <language>python2</language>
      <status>unknown</status>
    </bitbots_documentation>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
