<?xml version="1.0"?>
<package format="2">
  <name>humanoid_base_footprint</name>
  <version>1.0.0</version>
  <description>publishes a transform to the base footprint of the robot, based on the orientation and position of the feet.</description>

  <maintainer email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf_conversions</depend>
  <depend>geometry_msgs</depend>


  <export>
    <bitbots_documentation>
      <language>python2</language>
      <status>tested_viz</status>
    </bitbots_documentation>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
